It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sun, Jun 6, 2009
---------------------------------------------------------------------
- Implemented options for Leads.
- Happy birthday, Rema!

Thu, Jun 4, 2009
---------------------------------------------------------------------
- Implemented :sort_by option for Campaigns.
- Wrote specs and finished [Options] for Campaigns.

Wed, Jun 3, 2009
---------------------------------------------------------------------
- Implemented :per_page, and :format user preferences for Campaigns.
- Revisited user Preference model and wrote full spec coverage.
- Refactored application.js to simplify remote form updates.
- Updated stylesheets to support long and brief list formats.

Tue, Jun 2, 2009
---------------------------------------------------------------------
- Added [Options] form for Campaigns with all preferences stubbed.

Mon, Jun 1, 2009
---------------------------------------------------------------------
- Happy birthday, Sophie!

Sun, May 31, 2009
---------------------------------------------------------------------
- Work on adding [Options] inline form and related controller actions.

Sat, May 30, 2009
---------------------------------------------------------------------
- Implemented crm.Menu class and added menu related CSS styles.

Fri, May 29, 2009
---------------------------------------------------------------------
- Fixed opportunity assignment issue reported by Deepu (LH #49).
- Fixed similar issue with the contact assignments.
- Fixed account sidebar issue when shipping/billing addresses are missing.

Thu, May 28, 2009
---------------------------------------------------------------------
- Server installation and configuration at Linode.

Wed, May 27, 2009
---------------------------------------------------------------------
- Refactored auto_complete to use before_filter.