@@ -1,6 +1,9 @@
 = styles_for :account
 
-= inline :create_account, new_account_path
+.title_tools
+  = link_to_inline(:create_account, new_account_path) << " | "
+  = link_to_inline(:options, options_accounts_path)
+
 .title
   %span#create_account_title Accounts
   = image_tag("loading.gif", :size => "16x16", :id => "loading", :style => "display: none;")
