@@ -1,5 +1,7 @@
 page.call "crm.flick", :empty, :toggle
+page.call "crm.hide_form", :options
 page.call "crm.flip_form", :create_account
+
 if params[:cancel] != "true"
   page[:create_account].replace_html :partial => "create"
   page.call "crm.set_title", :create_account
