@@ -1,0 +1,9 @@
+page.call "crm.flick", :empty, :toggle
+page.call "crm.hide_form", :create_account
+page.call "crm.flip_form", :options
+if params[:cancel] != "true"
+  page[:options].replace_html :partial => "options"
+  page.call "crm.set_title", :create_account, "Options"
+else
+  page.call "crm.set_title", :create_account, "Accounts"
+end
