@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Tue, Jun 9, 2009
+---------------------------------------------------------------------
+- Implemented options for Accounts.
+
 Sun, Jun 6, 2009
 ---------------------------------------------------------------------
 - Implemented options for Leads.
